--- a/B505-Final-Exam/MST-student.ipynb
+++ b/B505-Final-Exam/MST-student.ipynb
@@ -22,7 +22,7 @@
     "* [Problem 10](#P10)\n",
     "* [Problem 11](#P11)\n",
     "* [Programming Problem 1](#pp1)\n",
-    "* [Programming Problem 1](#pp2)\n",
+    "* [Programming Problem 2](#pp2)\n",
     "\n",
     "***\n"
    ]
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -696,21 +696,22 @@
     "[back to table of contents](#toc)\n",
     "\n",
     "### Q 1.1 (A)\n",
-    "The minimum spanning tree does not change when each edge weight is incremented by 1\n",
+    "- The minimum spanning tree does not change when each edge weight is incremented by 1\n",
+    "\n",
     "### Q 1.2 (B)\n",
-    "Removing the root node is the only way to disconnect the tree\n",
+    "- Removing the root node is the only way to disconnect the tree\n",
     "\n",
     "### Q 1.3 (C)\n",
-    "?\n",
+    "- A search operation takes O(n) time\n",
     "\n",
     "### Q 1.4 (D)\n",
-    "6 minutes \n",
+    "- 6 minutes \n",
     "\n",
     "### Q 1.5 (B)\n",
-    "{him, ham, cat, bat}\n",
+    "- {him, ham, cat, bat}\n",
     "\n",
     "### Q 1.6 (D)\n",
-    "bacca\n",
+    "- bacca\n",
     "\n",
     "***"
    ]
@@ -743,7 +744,7 @@
     "\n",
     "In summary, Dijkstra’s algorithm needs to be run twice $O(2mlogn) \\approx O(mlogn)$ and the $O(n)$  \n",
     "\n",
-    "So the total running time of the algorithm is $O(mlogn) + O(c)$. Assuming $c \\approx O(m)$, the total rumnning time of this algorithm is $O(mlogn)$\n",
+    "So the total running time of the algorithm is $O(mlogn) + O(c)$. Assuming $c \\approx O(m)$, the total running time of this algorithm is $O(mlogn)$\n",
     "\n",
     "***"
    ]
@@ -759,7 +760,7 @@
     "\n",
     "Removing a node $v$ from a graph $G$, also removes certain number of edges $e \\leq m$. A connected graph $G$ becomes disconnected upon the removal of a node $v$ if any one of the edges $e$ is a `bridge`. The goal then is to identify if any of $e$ is a bridge. \n",
     "\n",
-    "In other words, given a graph $G$, the aim is to identify edges which are bridges in O(m+n) time according to the question. Then we can check if any of the removed edges are bridges to decide if the graph remains connected or not upon the removal of a node.\n",
+    "In other words, given a graph $G$, the aim is to identify edges which are bridges in $O(m+n)$ time according to the question. Then we can check if any of the removed edges are bridges to decide if the graph remains connected or not upon the removal of a node.\n",
     "\n",
     "The DFS rooted on a node, gives rise to two kinds of edges in the resulting DFS tree since DFS does not visit all edges of a graph.\n",
     "1. Forward edges - These are the edges of $G$ which are visited while generating the DFS tree\n",
@@ -774,36 +775,13 @@
     "2. During DFS on $G$, keep track and update the following information\n",
     "    - Discovery time (`disc`): For each node, this value indicates the time (starting from 0) at which the node is visited by the DFS\n",
     "    - Low value (`low`): This value for each node, $u$, indicates whether there is an earlier node (whose discovery time value will be lower) which can be visited by the subtree rooted in the node $u$.\n",
-    "3. In DFS tree a forward edge (u, v) (u is parent of v in DFS tree) is a bridge if there does not exist any other alternative to reach u or an ancestor of u from subtree rooted with v. low[v] indicates earliest visited vertex reachable from subtree rooted with v. The condition for an edge (u, v) to be a bridge is, “low[v] > disc[u]”\n",
+    "3. In DFS tree a forward edge (u, v) (u is parent of v in the tree) is a bridge if there does not exist any other alternative to reach u or an ancestor of u from subtree rooted with v. low[v] indicates earliest visited vertex reachable from subtree rooted with v. The condition for an edge (u, v) to be a bridge is, “low[v] > disc[u]”\n",
     "4. Store all such (u,v). These are the bridges.\n",
     "\n",
     "\n",
     "Given the list of all bridge edges, check if any of these bridge edges is present in the list of removed edges when node v is removed from graph $G$. This check can be an $O(1)$ or $O(m)$ operation. If it is present, then this means that the graph becomes disconnected upon removal of the node. Otherwise, it remains connected. \n",
     "\n",
     "The overall time complexity of this algorithm is $O(m+n)$\n",
-    "\n",
-    "```\n",
-    "    //the value of 'time' will not be initialized for next function calls mark start as visited\n",
-    "\n",
-    "    time := 0 \n",
-    "    set disc[start] := time+1 and low[start] := time + 1\n",
-    "    time := time + 1\n",
-    "\n",
-    "    for all vertex v in the graph G, do\n",
-    "        if there is an edge between (start, v), then\n",
-    "            if v is visited, then\n",
-    "                parent[v] := start\n",
-    "                bridgeDetails(v, visited, disc, low, parent)\n",
-    "                low[start] := minimum of low[start] and low[v]\n",
-    "\n",
-    "                if low[v] > disc[start], then\n",
-    "                display bridges from start to v\n",
-    "            else if v is not the parent of start, then\n",
-    "                low[start] := minimum of low[start] and disc[v]\n",
-    "    done\n",
-    "    \n",
-    "    End\n",
-    "```\n",
     "\n",
     "***"
    ]
@@ -837,23 +815,23 @@
     "\n",
     "- Choose any random vertex in graph $G$. This is $O(1)$.\n",
     "- Let this vertex be $u$. \n",
-    "- Iterate over its neighbors in graph $T$ and store the vertex and its neighbors in a list $A$. Data structure used is an array or a linked list. This is an $O($V$)$ operation\n",
+    "- Iterate over its neighbors (and their neighbors and so on...) in graph $T$ and store the vertex and its neighbors in a list $A$. DFS can be used starting from $u$ to get all nodes to be put into $A$. Data structure used for $A$ is an array or a linked list. This is an $O(|V|)$ operation since it is a tree.\n",
     "- This list of nodes belong, without loss of generality, to $A$. \n",
     "\n",
     "Next,\n",
     "\n",
     "- Get a random vertex of the $G$ which is not in $A$. This is an $O(|V|)$ operation.\n",
     "- Let this vertex be $v$. \n",
-    "- Iterate over its neighbors in graph $T$ and store the vertex and its neighbors in a list $B$. Data structure used is an array or a linked list. This is an $O(|V|)$ operation\n",
-    "- This list of nodes belong, without loss of generality, to $A$. \n",
+    "- Iterate over its neighbors (and their neighbors and so on...) in graph $T$ and store the vertex and its neighbors in a list $B$. DFS can be used starting from $v$ to get all nodes to be put into $B$. Data structure used for $B$ is an array or a linked list. This is an $O(|V|)$ operation since it is a tree.\n",
+    "- This list of nodes belong, without loss of generality, to $B$. \n",
     "\n",
     "Next,\n",
-    "- Iterate over the list of edges of $G$. This is $O(|E|)$\n",
+    "- Iterating over the list of edges of $G$. This is $O(|E|)$\n",
     "    - Get the end points of the edge: $(u,v)$\n",
-    "    - If ($u$ is in $A$ and $v$ is in $B$) or ($v$ is in $A$ and $u$ is in $B$), set $min_edge = (u,v)$. *Searching for $u, v$ in $A or B$ is O(|V|) operation*    \n",
-    "    - Update $min_edge$ as the loop progresses.\n",
+    "    - If ($u$ is in $A$ and $v$ is in $B$) or ($v$ is in $A$ and $u$ is in $B$), set $min\\_edge = (u,v)$. *Searching for $u,\\ v$ in $A\\ or\\ B$ is O(|V|) operation*    \n",
+    "    - Update $min\\_edge$ as the loop progresses.\n",
     "\n",
-    "The final edge to be added to restore the minimum spanning tree is $(u,v)$\n",
+    "The final edge to be added to restore the minimum spanning tree is the $min\\_edge$\n",
     "\n",
     "\n",
     "Complexity of this algorithm $O(|E|)$ under the assumption that $|E|>|V|$\n",
@@ -907,17 +885,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc(n): \n",
     "    k=0 #O(1)\n",
     "    i = n/2 #O(1)\n",
-    "    while(i<=n): #since i is incrementing by 1 each time, this has to run a maximum (worst case) of n/2 times as it starts from n/2\n",
+    "    while(i<=n): #since i is increasing by 1 each time, this has to run a maximum (worst case) of n/2 times as it starts from n/2\n",
     "        i=i+1 #O(1)\n",
     "        j=2 #O(1)\n",
-    "        #since j is incrementing by a factor of 2 each time, the remaining interval decreases by a factor of 2. \n",
+    "        #since j is increasing by a factor of 2 each time, the size of the remaining interval decreases by a factor of 2. \n",
     "        # Thus this has worse case time complexity of O(logn)\n",
     "        while(j<=n):\n",
     "            j=j*2 #O(1)\n",
@@ -947,14 +925,14 @@
     "1. Merge sort always splits the array into two equal halves while quick sort doesn't necessarily split into two equal halves. Instead it splits in a ratio based on the pivot location\n",
     "2. Time complexity of quick sort is $O(N^2)$ whereas time complexity of merge sort is $O(NlogN)$\n",
     "3. Merge sort is a stable sorting algorithm while quick sort is unstable.\n",
-    "4. Since merge sort is a recursive algorithm, it can be memory ineffiecient and perform have a large recursive stack\n",
-    "5. Quick sort is an inplace sorting (memory efficient) whereas merge sort requires additional memory to store the sorted elements.\n",
+    "4. Since merge sort is a recursive algorithm, it can be memory ineffiecient and have a large recursion stack\n",
+    "5. Quick sort is inplace sorting (memory efficient) whereas merge sort requires additional memory to store the sorted elements.\n",
     "\n",
     "\n",
     "Why merge sort is better for linked lists.\n",
     "\n",
     "In linked lists, the elements to be sorted are not stored in adjacent memory locations (unlike an array).  \n",
-    "To access an element in the ith position in a linked list, we have to start from the head element and sequentially travel each and every node until we reach the ith position as we don’t have a continuous block of memory (having which, would have made quick random access possible).  \n",
+    "To access an element in the $i^{th}$ position in a linked list, we have to start from the head element and sequentially travel each and every node until we reach the $i^{th}$ position as we don’t have a continuous block of memory (having which, would have made quick random access possible).  \n",
     "\n",
     "Quick Sort requires a lot of access to different memory locations (randomly, not sequentially).  Therefore, quick sort used on linked list is slow and heavy.   \n",
     "On the other hand, merge sort accesses data sequentially and the need for random access is low, which makes it very suitable for linked lists.\n",
@@ -973,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1030,7 @@
     "- The two letters don't match. Number of comparisons made so far = 1\n",
     "- Mismatch occurs between p's C and s's T. \n",
     "- Check if T is present in p. \n",
-    "- It is. Get the position of T in p using the lookup table created at the beginning of the program (Named `last`). It is at position 1 of the pattern\n",
+    "- It is. Get the position of T in p using the lookup table created at the beginning of the program (Named `last`). It is at position 1 of the pattern. Note positions in last start from 0\n",
     "- Now the pattern is shifted so that CTGC comes under ...ATGA... of the string.  \n",
     "\n",
     "This completes the first iteration of the algorithm \n",
@@ -1089,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1205,12 +1183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Dynamic_Knapsack(array,target_sum):\n",
-    "\n",
+    "    \"\"\"This is my first solution to the problem. \n",
+    "    This uses top-down dynamic programming with memoization. \n",
+    "    It first creates a dynamic programming table and then traverses the table to get the subset of elements\"\"\"\n",
     "    n = len(array)\n",
     "\n",
     "    # the dynamic programming table \n",
@@ -1248,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1291,12 +1271,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# My exam submission ends here.   \n",
+    "\n",
+    "***\n",
+    "\n",
+    "\n",
+    "What follows is not to be graded as it is just an extra attempt to the modified knapsack problem which I was trying out.   \n",
+    "It involves dynamic programming with memoisation using a bottom up approach as opposed to the top down solution I proposed above.  \n",
+    "While I get the right sum value in the bottom up approach, I do not yet know how to traverse the table to output the subset of elements leading to the sum\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dynamic_knapsack(arr,target_sum):\n",
+    "\n",
+    "    \"\"\"This is another attempt at the modified knapsack.\n",
+    "    This uses top-down dynamic programming with memoization. \n",
+    "    It first creates a dynamic programming table to output \n",
+    "    the sum closest to the target sum which can be obtained from a subset of the array. \"\"\"\n",
     "\n",
     "    n = len(arr)\n",
     "\n",
@@ -1326,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1344,6 +1347,11 @@
     "\n",
     "add_to_sack = []\n",
     "row = 0\n",
+    "\n",
+    "# traversing the left most column of the table \n",
+    "# and storing the indices of the row whose value is not the same as the next row\n",
+    "# Then obtaining the elements of the array present at these stores indices.\n",
+    "# This forms the subset.\n",
     "while row<len(table)-1:\n",
     "    if table[row+1][0] != table[row][0]:\n",
     "        add_to_sack.append(A[row])\n",
@@ -1353,8 +1361,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is correct (both the sum and the subset)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1381,8 +1396,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The sum is correct but the subset is incorrect"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1406,6 +1428,13 @@
     "    row += 1\n",
     "\n",
     "print(f\"subset of elements summing closest to {target_sum} is {add_to_sack} with a sum of {table[0][0]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The sum is correct but the subset is incorrect"
    ]
   },
   {
